"Second Christmas" (0.9.2) 2013/12/25

- You can only influence bounce direction whilst touching something
- Vectorized ball
- The zipped .love should work
- Removed LÖVE 0.8.0 compatibility

"Christmas release" (0.9.1) 2013/12/24

- Updated graphics
- Added title screen
- Added HUD
- Fixed controls
- Music pauses when the game is paused
- Added online highscores
- Game pauses when window loses focus
- Now compatible with LÖVE 0.9.0

"October 4 release" (0.9.0.131004) 2013/10/04

- First release