@@ -12,9 +12,8 @@ function love.conf(t)
     t.window.fullscreen = false -- Enable fullscreen (boolean)
     t.window.vsync = true       -- Enable vertical sync (boolean)
     t.window.fsaa = 0           -- The number of FSAA-buffers (number)
-    t.window.title = t.title
     t.window.borderless = false        -- Remove all border visuals from the window (boolean)
-    t.window.resizable = false         -- Let the window be user-resizable (boolean)
+    t.window.resizable = true         -- Let the window be user-resizable (boolean)
     t.window.minwidth = 1              -- Minimum window width if the window is resizable (number)
     t.window.minheight = 1             -- Minimum window height if the window is resizable (number)
     t.window.fullscreentype = "normal" -- Standard fullscreen or desktop fullscreen mode (string)
